# VocableTrainer-Android

./: .directory  .gitignore  .travis.yml  COPYRIGHT  LICENSE.txt  README.md  TODO_DB3.TXT  build.gradle  emulator_workarounds.md  sync_agb.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gradle.yml
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
docs/: .gitignore  db sheet.ods  example_full.csv
gradle/wrapper/: gradle-wrapper.properties
live-tests/: .gitignore  download_file.sh  example_full.csv  example_full_raw.csv  multi_list.csv  multi_value.csv  multi_value_gui.csv  raw_data.csv  upload_files.sh
live-tests/generator/: Cargo.toml  README.md
live-tests/generator/src/: main.rs
survey_backend/: Cargo.toml  README.md  setup.sql  workspace.code-workspace
survey_backend/config/: default.toml
survey_backend/fs/: index.html
survey_backend/src/: db.rs  errors.rs  get.rs  main.rs  post.rs  settings.rs
vocabletrainer/: README.md  pubspec.yaml
vocabletrainer/android/app/: build.gradle
vocabletrainer/ios/Runner/: Info.plist
vocabletrainer/ios/Runner.xcodeproj/: project.pbxproj
vocabletrainer/lib/: main.dart
vocabletrainer/lib/common/: scaffold.dart  theme.dart
vocabletrainer/lib/dialog/: EntryEditDialog.dart  ListEditDialog.dart
vocabletrainer/linux/: CMakeLists.txt  my_application.cc
vocabletrainer/test/: widget_test.dart
vocabletrainer/web/: index.html  manifest.json
vocabletrainer/windows/: CMakeLists.txt
(+317 files in other folders)
