[package]
name = "survey-backend"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
actix = "0.7"
actix-web = "0.7"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
mysql = "15.1"
failure = "0.1"
log = "0.4"
env_logger = "0.6"
num_cpus = "1.10"
config = "0.9"