[package]
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
name = "survey-backend"
version = "0.1.1"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = {version = "0.4", features = ["serde"]}
config = "0.9"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
log = "0.4"
mysql = "15.1"
num_cpus = "1.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
