[package]
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
name = "survey-backend"
version = "0.2.0"

[dependencies]
actix-files = "0.6"
actix-web = "4"
chrono = {version = "0.4", features = ["serde"]}
config = "0.13"
env_logger = "0.9"
anyhow = "1.0"
log = "0.4"
mysql_async = {version = "0.30"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# set chrono dependency to true
[dependencies.mysql_common]
features = ["chrono"]
version = "*"